# MakeLS

./: .gitignore  .pre-commit-config.yaml  flake.nix  loguru-logging-intercept.nix  make_ls.nix  setup.cfg
make_ls/: __init__.py  __main__.py  server.py
