[metadata]
name = make_ls
version = 0.0.1
author = Sigmanificient
description = Language Server for Make(file)
platform = unix, linux

[options]
include_package_data = True
packages =
    make_ls
python_requires = >=3.10
zip_safe = no
install_requires =
    pygls >= 1.3.1
    loguru >= 0.7.2

[options.entry_points]
console_scripts =
    make_ls = make_ls.__main__:main
